--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,7 +14,7 @@
       "type": "chrome",
       "request": "launch",
       "name": "Launch Chrome against localhost",
-      "url": "http://localhost:8080/MNANTEC-SKRT%20MD/",
+      "url": "http://localhost:8080/MNANTEC-SKRT%20MD/index.php",
       "webRoot": "${workspaceFolder}"
     }
   ]
